# provenance-aware-rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
src/provenance_rag/: __init__.py  api.py  audit.py  chunking.py  confidence.py  generation.py  ingestion.py  models.py  provenance.py  retrieval.py  temporal.py
tests/: test_api.py  test_confidence.py  test_ingestion.py  test_provenance.py  test_retrieval.py
