[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provenance-rag"
version = "0.1.0"
description = "Trustworthy enterprise RAG with source lineage, auditability, temporal awareness, and confidence scoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Akash Raj" },
    { name = "Prem Kumar" },
]

dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2,<3",
    "scikit-learn>=1.5,<2",
    "rank-bm25>=0.2.2,<1",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
